--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,16 @@
 {
-  "extends": [":semanticCommitsDisabled"],
-  "enabledManagers": ["cargo", "github-actions"],
+  "extends": [
+    ":dependencyDashboard",
+    "group:monorepos",
+    "group:recommended",
+    "replacements:all",
+    "workarounds:all"
+  ],
   "timezone": "America/New_York",
   "schedule": ["every weekday after 9am before 5pm"],
   "branchConcurrentLimit": 10,
   "labels": ["automerge"],
-  "dependencyDashboard": true
+  "cargo": {
+    "fileMatch": ["^Cargo\\.(lock|toml)$"]
+  }
 }
