Do not renovate release.yml

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,5 +12,8 @@
   "labels": ["automerge"],
   "cargo": {
     "fileMatch": ["^Cargo\\.(lock|toml)$"]
+  },
+  "github-actions": {
+    "ignorePaths": [".github/workflows/release.yml"]
   }
 }
