--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ociupdate"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 repository = "https://github.com/theoremlp/ociupdate"
 
@@ -31,8 +31,12 @@ installers = []
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = [
     "aarch64-apple-darwin",
+    "aarch64-unknown-linux-gnu",
     "x86_64-apple-darwin",
     "x86_64-unknown-linux-gnu",
 ]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+
+[workspace.metadata.dist.github-custom-runners]
+aarch64-unknown-linux-gnu = "gh-linux-arm64-2cpu"
